# sample-puzzle-game

./: README.md  run.bat
media/puzzle-example/: CMakeLists.txt
media/puzzle-example/USB/: puzzle-example.elf  puzzle-example.xml
media/puzzle-example/src/: PuzzleLogic.cpp  PuzzleLogic.h  main.cpp
